--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,8 +15,8 @@ html {
 
 body {
     font-size: 1.6rem;
-    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
+    font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -30,4 +30,5 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 0 20px;
+    color: #333;
 }
